<resources>
    <string name="app_name">DiceGame</string>
    <string name="displayScore">0</string>
    <string name="start_game">Start</string>
    <string name="highscore">highscore</string>
    <string name="altText21">21</string>
    <string name="rules">Play until you get to 21 or as close to 21 as you can and if you go over 21 you lose</string>
    <string name="title_activity_start_game">Spelar</string>
    <string name="diceRoll">Roll dice</string>
    <string name="stopPlaying">Stop playing</string>
    <string name="playAgain">Play again</string>
    <string name="exit">Exit</string>
    <string name="won">You won!</string>
    <string name="lost">You lost!</string>
    <string name="highscorelist">Highscores: \n</string>
    <string name="startScreen">Return to start</string>
</resources>
